# sinwave-producer-consumer

./: .gitignore  CMakeLists.txt  bbuild.sh  readme.md
app/: CMakeLists.txt  main.cpp
docker/: builder-launch.sh  builder.Dockerfile
documentation/: CMakeLists.txt  Doxyfile.in
lib/: CMakeLists.txt  gm_lib.cpp  gm_lib.hpp
scripts/: plot.py  readme.md  requirements.txt
test/: CMakeLists.txt  test_thread_safe_queue.cpp
